--- a/Project.toml
+++ b/Project.toml
@@ -1,1 +1,17 @@
+name = "SignedDistances"
+uuid = "9749a954-e20f-4f9a-ae67-5bbe4a8fce84"
+version = "0.1.0"
+
 [deps]
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
+[compat]
+GeometryBasics = "0.5.10"
+julia = "1.10"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
